--- a/EntityFramworkCore.ConsoleApp/EntityFramworkCore.ConsoleApp.csproj
+++ b/EntityFramworkCore.ConsoleApp/EntityFramworkCore.ConsoleApp.csproj
@@ -7,4 +7,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8" />
+	</ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EntityFramworkCore.Data\EntityFramworkCore.Data.csproj" />
+    <ProjectReference Include="..\EntityFramworkCore.Domain\EntityFramworkCore.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
